// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery rendering rendering with load more button it shouldn't render the paging button if hasn't more item 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering rendering with load more button renders correctly 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": 855638016,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={{}}
      testID="gallery-test-pagination-button"
    >
      <Text>
        Load more
      </Text>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering rendering with load more button renders correctly with custom paging button title 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": 855638016,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={{}}
      testID="gallery-test-pagination-button"
    >
      <Text>
        Show more
      </Text>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly horizontal 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginStart": 8,
      }
    }
    horizontal={true}
    keyExtractor={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "width": 750,
          }
        }
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly with empty list and custom placeholder 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    refreshing={false}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <Text>
        Empty list...
      </Text>
    </View>
  </View>
</View>
`;

exports[`Gallery rendering renders correctly with filter 1`] = `
<View
  style={{}}
  testID="gallery-test"
>
  <View>
    <TextInput />
  </View>
  <View
    ListFooterComponentStyle={
      {
        "marginTop": 8,
      }
    }
    horizontal={false}
    keyExtractor={[Function]}
    numColumns={2}
    onEndReached={[Function]}
    onEndReachedThreshold={0.6}
    scrollEventThrottle={50}
    testID="gallery-test-list"
  >
    <View>
      <View
        testID="gallery-test-list-item-11"
      >
        <View
          style={
            [
              undefined,
              undefined,
              false,
            ]
          }
        >
          11
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-22"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          22
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-33"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          33
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-44"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          44
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-55"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          55
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-66"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          66
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-77"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          77
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-88"
      >
        <View
          style={
            [
              undefined,
              false,
              false,
            ]
          }
        >
          88
        </View>
      </View>
    </View>
    <View>
      <View
        testID="gallery-test-list-item-99"
      >
        <View
          style={
            [
              undefined,
              false,
              undefined,
            ]
          }
        >
          99
        </View>
      </View>
    </View>
  </View>
</View>
`;
